# six-iot-sdk-esp32

./: .clang-format  .cproject  .project  CMakeLists.txt  Flash.md  README.md  nvs-creds-aws.csv  nvs-creds-default.csv  partitions-debug.csv  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.old
components/esp32_conf/: CMakeLists.txt
components/esp32_conf/include/: six_iot_config.h
components/esp32_cred/: CMakeLists.txt  six_iot_creds.c
components/esp32_cred/include/: six_iot_creds.h
components/esp32_log/: CMakeLists.txt  six_iot_log.c
components/esp32_log/include/: six_iot_log.h
components/esp32_main/: CMakeLists.txt  Kconfig.projbuild  six_iam_jwt.c  six_iot_device.c  six_iot_init.c  six_iot_mqtt.c  six_iot_sdk.c  six_iot_shadow.c
components/esp32_main/include/: six_iam_jwt.h  six_iot_device.h  six_iot_mqtt.h  six_iot_sdk.h  six_iot_shadow.h
components/esp32_ota/: CMakeLists.txt  six_iot_ota.c
components/esp32_ota/include/: six_iot_ota.h
components/esp32_proto/: CMakeLists.txt
components/esp32_proto/proto/: esp_six_user_mapping.proto
components/esp32_prov_blufi/: CMakeLists.txt  Kconfig.projbuild  blufi_init.c  blufi_security.c  six_iot_prov_blufi.c
components/esp32_prov_blufi/include/: six_iot_prov_blufi.h
components/esp32_prov_npm/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  six_iot_network_prov_manager.c
components/esp32_prov_npm/include/: six_iot_network_prov_manager.h
components/esp32_prov_softap/: CMakeLists.txt  Kconfig.projbuild  six_iot_prov_softap.c  wifi.html
components/esp32_prov_softap/include/: six_iot_prov_softap.h
components/esp32_util/: CMakeLists.txt  six_iot_nvs.c  six_iot_util.c
components/esp32_util/include/: six_iot_nvs.h  six_iot_util.h
device_certs/: device_cert.pem
device_certs/aws/: device_key.pem  device_network_prov.json
device_certs/default/: device_key.pem  device_network_prov.json
main/: CMakeLists.txt  Kconfig.projbuild  six_iot_demo.c  version.h  version.h.in
